refactor(quality): prefer Stream.toList() over collect(Collectors.toList()) (S6204); drop now-unused Collectors imports